Remove overflow-y:auto to fix scrolling jumping around
Closes #29

--- a/www/static/style.css
+++ b/www/static/style.css
@@ -64,7 +64,6 @@ main#content {
   flex: 1;
   max-width: 1280px;
   padding: 2rem;
-  overflow-y: auto;
 }
 
 ul.site-menu {
